# prompt-enhancer

./: .gitignore  LICENSE  README.md  conftest.py  install.bat  install.sh  pyproject.toml  requirements.txt  run.sh
src/: app_log.py  autostart.py  config.py  config_ui.py  enhancer.py  health.py  hotkey_listener.py  linux_input.py  main.py  prompts.py  runtime.py  settings_launcher.py  single_instance.py  text_bridge.py  tray.py  updater.py
src/prompt_enhancer/: __init__.py  __main__.py  main.py
src/prompt_enhancer/core/: __init__.py  config.py  enhancer.py  health.py  prompts.py  updater.py  version.py
src/prompt_enhancer/input/: __init__.py  hotkey_listener.py  text_bridge.py
src/prompt_enhancer/platform/: __init__.py  autostart.py  evdev_hotkeys.py  runtime.py  single_instance.py  tray.py
src/prompt_enhancer/ui/: __init__.py  async_ui.py  settings_launcher.py  settings_window.py
tests/: test_pure_logic.py
