[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-enhancer"
version = "1.0.0"
description = "AI-powered text enhancement hotkey tool for Linux (Wayland + X11)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Akash Soni", email = "hi@akashsoni.com" }]
dependencies = [
    "openai==2.38.0",
    "pynput==1.8.2",
    "pyperclip==1.11.0",
    "pystray==0.19.5",
    "Pillow==12.2.0",
    "customtkinter==5.2.2",
    "keyring==25.7.0",
    "evdev==1.9.3",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
prompt-enhancer = "prompt_enhancer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
